@@ -74,6 +74,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13254: Fix Maildir initialization so that maildir contents
+  are read correctly.
+
 - Issue #13140: Fix the daemon_threads attribute of ThreadingMixIn.
 
 - Issue #2892: preserve iterparse events in case of SyntaxError.
